--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="https://ashhanai.github.io/blockchain-developer-bootcamp-final-project/client/public/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Web site created using create-react-app"/>
         <link rel="apple-touch-icon" href="logo192.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>P2P Loan protocol</title>
     </head>
     <body>
